--- a/myApp/templates/includes/footer.html
+++ b/myApp/templates/includes/footer.html
@@ -6,13 +6,12 @@
 <a href="{% url 'index' %}">home</a>
     <a href="/product/">product</a>
     <a href="/about/">about us</a>
-    <a href="#contact">contact</a>
+    <a href="/contact/">contact</a>
 </div>
 
 <div class="box">
 <h3> extra links</h3>
-<a href="#">my account</a>
-<a href="#">my orders</a>
+<a href="/profile/">my account</a>
 </div>
 
 <div class="box">
